--- a/MemeMaker/Base.lproj/Main.storyboard
+++ b/MemeMaker/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +10,93 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMaker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="FBR-Uc-V6g">
+                                <rect key="frame" x="-640" y="10.5" width="1600" height="459"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="M03-Jp-5qb">
+                                        <rect key="frame" x="0.0" y="0.0" width="1600" height="75.5"/>
+                                        <subviews>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="AOt-BT-taN">
+                                                <rect key="frame" x="743.5" y="0.0" width="113" height="32"/>
+                                                <segments>
+                                                    <segment title="🕶"/>
+                                                    <segment title="💥"/>
+                                                    <segment title="💕"/>
+                                                </segments>
+                                                <connections>
+                                                    <action selector="topSegmentedControlValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="g4t-KE-7LX"/>
+                                                </connections>
+                                            </segmentedControl>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Caption" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ruZ-0h-niF">
+                                                <rect key="frame" x="754" y="55" width="92.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wojak" translatesAutoresizingMaskIntoConstraints="NO" id="RYw-ju-Ewc">
+                                        <rect key="frame" x="0.0" y="105.5" width="1600" height="250"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="250" id="dsD-b0-tTb"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="22" translatesAutoresizingMaskIntoConstraints="NO" id="16k-fA-3f3">
+                                        <rect key="frame" x="0.0" y="385.5" width="1600" height="73.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bottom Caption" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eRA-8I-OZO">
+                                                <rect key="frame" x="740" y="0.0" width="120" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ePb-3J-1FK">
+                                                <rect key="frame" x="743.5" y="42.5" width="113" height="32"/>
+                                                <segments>
+                                                    <segment title="🐱"/>
+                                                    <segment title="🐕"/>
+                                                    <segment title="🐒"/>
+                                                </segments>
+                                                <connections>
+                                                    <action selector="bottomSegmentedControlValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="Bgd-BD-heK"/>
+                                                </connections>
+                                            </segmentedControl>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="M03-Jp-5qb" secondAttribute="trailing" id="6GP-Uz-E4t"/>
+                                    <constraint firstAttribute="trailing" secondItem="16k-fA-3f3" secondAttribute="trailing" id="EXT-G9-pQL"/>
+                                    <constraint firstItem="16k-fA-3f3" firstAttribute="leading" secondItem="FBR-Uc-V6g" secondAttribute="leading" id="Kl4-H8-TMV"/>
+                                    <constraint firstItem="M03-Jp-5qb" firstAttribute="leading" secondItem="FBR-Uc-V6g" secondAttribute="leading" id="avd-v4-DcD"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="FBR-Uc-V6g" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="1YZ-H3-PPa"/>
+                            <constraint firstItem="FBR-Uc-V6g" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="7gO-0d-ZwQ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="bottomCaptionLabel" destination="eRA-8I-OZO" id="8UM-Lv-XJv"/>
+                        <outlet property="bottomSegmentedControl" destination="ePb-3J-1FK" id="wyd-EN-CzE"/>
+                        <outlet property="topCaptionLabel" destination="ruZ-0h-niF" id="eak-Yg-otV"/>
+                        <outlet property="topSegmentedControl" destination="AOt-BT-taN" id="cBG-dF-3cn"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="127"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="wojak" width="1600" height="900"/>
+    </resources>
 </document>
